# IR_sim

./: .gitignore  CMakeLists.txt  README.md  changes.txt  parameters.txt  run.sh
para/: 12.target2  IRSim_mw.txt  IRSim_sw.txt  Traj_cam_config.txt  Traj_config.txt  Traj_config1.txt  Traj_new.traj  Traj_state.tarj  j8_2_ASE.ASE  j8_2_ASE.target2  j8_2_fishnewchange5_2--0106.ftgds  test--gd2.traj  zero.traj
params/: rectify_camera_sw1214.yml  rectify_camera_sw1220.yml  stereo_camera_sw1214.yml  stereo_camera_sw1220.yml
src/: Atmod.cpp  Atmod.h  DVFileStore.cpp  DVFileStore.h  DataType.h  Graphics_IRrad.cpp  Graphics_IRrad.h  IRImg_AR.cpp  IRImg_AR.h  Variable.cpp  Variable.h  main.cpp  paraReader.cpp  paraReader.h
src/readIR/: ftcamif.cpp  ftcamif.h  ftcamif_wrap.c  ftd2xx.h
src/stereo/: Pose2Dto2D.cpp  Pose2Dto2D.h
src/stereo/basefunc/: basefunc.cpp  basefunc.h
src/stereo/calib/: stereocalib.cpp  stereocalib.h
src/stereo/reconstruct/: stereoreconstruction.cpp  stereoreconstruction.h
src/stereo/reconstruct/SPS/: SPSStereo.cpp  SPSStereo.h
src/stereo/reconstruct/SSCA/: CMakeLists.txt  CommFunc.h  SSCA.cpp
src/stereo/reconstruct/SSCA/CAFilter/: BFCA.cpp  BFCA.h  BilateralFilter.h  BoxCA.cpp  BoxCA.h  GFCA.cpp  GFCA.h  GuidedFilter.cpp  GuidedFilter.h
src/stereo/reconstruct/SSCA/CANLC/: NLCCA.cpp  NLCCA.h  qx_basic.h  qx_tree_filter.h
src/stereo/reconstruct/SSCA/CAST/: STCA.cpp  STCA.h  SegmentTree.cpp  SegmentTree.h  StereoDisparity.cpp  StereoDisparity.h  Toolkit.cpp  disjoint-set.h  segment-graph.h
src/stereo/reconstruct/SSCA/CC/: CGCC.cpp  CGCC.h  CenCC.cpp  CenCC.h  GrdCC.cpp  GrdCC.h
src/stereo/reconstruct/SSCA/PPSG/: SGPP.cpp  SGPP.h  filter.h  segment-image.h
src/stereo/reconstruct/SSCA/PPWM/: WMPP.h
src/stereo/reconstruct/STCA/: StereoDisparity.cpp  StereoDisparity.h
src/stereo/rectify/: stereorectify.cpp  stereorectify.h
